@@ -18,6 +18,10 @@ check http.get "get" {
   content = "Example Domain"                # optional
   content_expected = false                  # optional
   certificate_validity = 10d                # optional
+  auth {
+    username = "acidburn"                   # optional
+    password = "HackThePlanet"              # optional
+  }
 }
 
 # Posts alert details to a given URL.
